--- a/CristianProject/style.css
+++ b/CristianProject/style.css
@@ -4,26 +4,26 @@
 	margin-top: -12em;
 	height: 35em;
 }
-
+ 
 #navbar {
 	height: 2em;
 	text-align: center;
 }
-
+ 
 h1 {
 	text-align: center;
 	font-family: 'Lobster', cursive;
 	font-size: 3.81em;
 	color: #333333;
 }
-
+ 
 h2 {
 	text-align: center;
 	font-family: 'Lobster', cursive;
 	font-size: 1.313em;
 	color: #333333;
 }
-
+ 
 li {
 	display: inline;
 	padding: 0 1em 0 1em;
@@ -31,16 +31,68 @@ li {
 	color: #adadad;
 	font-size: 1.05em;
 }
-
+ 
 a {
 	color: inherit;
 	text-decoration: none;
 }
-
+ 
 a:hover {
 	color: red;
 }
-
+ 
 body {
 	margin: 0;
+}
+ 
+h3 {
+	text-align: left;
+	margin-left: 3em;
+	font-family: 'Patua One', cursive;
+	font-size: 2em;
+	color: #333333;
+}
+ 
+#content {
+	width: 70%;
+	margin: auto;
+	font-family: 'Crimson Text', serif;
+}
+ 
+.text {
+	width: 70%;
+	margin: auto;
+	text-align: justify;
+    text-justify: inter-word;
+    line-height: 150%;
+}
+ 
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+ 
+#footer {
+    height: 5em;
+}
+ 
+.miniphoto {
+	border-radius: 5%;
+    float: right;
+    margin:0.8em;
+}
+ 
+h4 {
+	text-align: center;
+	font-family: 'Lobster', cursive;
+	font-size: 1em;
+	color: #333333;
+	margin: 1.5em 0 0 0;
+}
+ 
+.sol {
+	height: 1.2em;
+	background: red;
+	margin: auto;
 }
