--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
 h1 {
 	text-align: center;
-	font-family: 'Lobster', cursive;
+	font-family: 'Aref Ruqaa', serif;
 	font-size: 3.81em;
 	color: #333333;
 }
